Fixed alert holder width
The new alert holder would cut off alerts on smaller screens. Should be fixed now.

--- a/style/src/style.css
+++ b/style/src/style.css
@@ -192,6 +192,7 @@ input[type=text] {display:inline;}
     border-right: 0;
     border-color: #2c2c2c;
     white-space: nowrap;
+    max-width: 100%;
 }
 
 /* highlight active menu */
